--- a/TWJieShuQuan/books/AddToLibraryViewController.xib
+++ b/TWJieShuQuan/books/AddToLibraryViewController.xib
@@ -20,11 +20,11 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zaY-VI-cXG">
-                    <rect key="frame" x="168" y="39" width="256" height="293"/>
+                    <rect key="frame" x="221" y="39" width="150" height="200"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="293" id="Gmm-Nf-3jS"/>
+                        <constraint firstAttribute="height" constant="200" id="Gmm-Nf-3jS"/>
                         <constraint firstAttribute="width" secondItem="zaY-VI-cXG" secondAttribute="height" multiplier="256:293" constant="312" id="s0V-3X-Amh"/>
-                        <constraint firstAttribute="width" constant="256" id="xAs-ke-CXC"/>
+                        <constraint firstAttribute="width" constant="150" id="xAs-ke-CXC"/>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
@@ -32,28 +32,6 @@
                         </mask>
                     </variation>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="book name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MbO-Vu-8vS">
-                    <rect key="frame" x="247" y="375" width="99" height="24"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="MbO-Vu-8vS" secondAttribute="height" multiplier="86:21" constant="312" id="72o-eX-7VZ"/>
-                        <constraint firstAttribute="width" constant="86" id="Gvt-Xe-X5c"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                    <variation key="default">
-                        <mask key="constraints">
-                            <exclude reference="72o-eX-7VZ"/>
-                            <exclude reference="Gvt-Xe-X5c"/>
-                        </mask>
-                    </variation>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="book author" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XNP-PP-Owc">
-                    <rect key="frame" x="250" y="404" width="93" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dzC-na-9IB">
                     <rect key="frame" x="0.0" y="545" width="600" height="55"/>
                     <color key="backgroundColor" red="0.40000000596046448" green="0.80000001192092896" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -69,6 +47,28 @@
                         <action selector="addToLibraryButtonPressed:" destination="-1" eventType="touchUpInside" id="xqp-oO-BFW"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="book name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MbO-Vu-8vS">
+                    <rect key="frame" x="247" y="276" width="99" height="24"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="MbO-Vu-8vS" secondAttribute="height" multiplier="86:21" constant="312" id="72o-eX-7VZ"/>
+                        <constraint firstAttribute="width" constant="86" id="Gvt-Xe-X5c"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="72o-eX-7VZ"/>
+                            <exclude reference="Gvt-Xe-X5c"/>
+                        </mask>
+                    </variation>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="book author" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XNP-PP-Owc">
+                    <rect key="frame" x="255" y="305" width="83" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
@@ -78,16 +78,20 @@
                 <constraint firstItem="MbO-Vu-8vS" firstAttribute="leading" secondItem="zaY-VI-cXG" secondAttribute="trailing" constant="-171" id="JOG-YO-Rkc"/>
                 <constraint firstAttribute="bottom" secondItem="dzC-na-9IB" secondAttribute="bottom" id="LYo-NZ-Cw1"/>
                 <constraint firstItem="dzC-na-9IB" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="MXR-tg-ZcI"/>
-                <constraint firstItem="MbO-Vu-8vS" firstAttribute="top" secondItem="zaY-VI-cXG" secondAttribute="top" constant="336" id="S5K-ha-jwY"/>
+                <constraint firstItem="MbO-Vu-8vS" firstAttribute="top" secondItem="zaY-VI-cXG" secondAttribute="top" constant="200" id="S5K-ha-jwY"/>
+                <constraint firstItem="XNP-PP-Owc" firstAttribute="top" secondItem="MbO-Vu-8vS" secondAttribute="bottom" constant="5" id="acd-5o-Xef"/>
                 <constraint firstItem="MbO-Vu-8vS" firstAttribute="top" secondItem="XNP-PP-Owc" secondAttribute="top" constant="-29" id="cNZ-BE-TXZ"/>
                 <constraint firstAttribute="centerX" secondItem="MbO-Vu-8vS" secondAttribute="centerX" id="csq-OL-qWC"/>
                 <constraint firstAttribute="centerX" secondItem="MbO-Vu-8vS" secondAttribute="centerX" constant="4" id="eEz-zl-awC"/>
+                <constraint firstItem="MbO-Vu-8vS" firstAttribute="top" secondItem="zaY-VI-cXG" secondAttribute="bottom" constant="37" id="l8h-h2-YZz"/>
                 <constraint firstAttribute="centerX" secondItem="XNP-PP-Owc" secondAttribute="centerX" constant="3.5" id="tHW-O9-H5U"/>
                 <constraint firstAttribute="centerY" secondItem="MbO-Vu-8vS" secondAttribute="centerY" constant="42.5" id="uM6-Us-2ev"/>
             </constraints>
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="JOG-YO-Rkc"/>
+                    <exclude reference="S5K-ha-jwY"/>
+                    <exclude reference="cNZ-BE-TXZ"/>
                     <exclude reference="csq-OL-qWC"/>
                     <exclude reference="uM6-Us-2ev"/>
                 </mask>
